Podstawowy — kopia/parser.output
Terminals unused in grammar

    LABEL
    NONE
    PROC


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 $@2: ε

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE

    4 program_arguments: ID
    5                  | program_arguments ',' ID

    6 vars: vars VAR vars ':' type ';'
    7     | ε

    8 type: INT

    9 vars: ID
   10     | vars ',' ID

   11 function_body: statements
   12              | ε

   13 statements: statements ';' statement
   14           | statement

   15 statement: ID ASSIGN expression
   16          | read
   17          | write

   18 expression: term
   19           | ADDOP term
   20           | expression ADDOP term

   21 term: factor
   22     | term MULOP factor

   23 factor: ID
   24       | VAL
   25       | '(' expression ')'

   26 expression_list: expression_list ',' expression
   27                | expression

   28 read: READ '(' expression_list ')'

   29 write: WRITE '(' expression_list ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 3 25 28 29
    ')' (41) 3 25 28 29
    ',' (44) 5 10 26
    '.' (46) 3
    ':' (58) 6
    ';' (59) 3 6 13
    error (256)
    PROGRAM (258) 3
    BEG (259) 3
    END (260) 3
    WRITE (261) 29
    READ (262) 28
    ASSIGN (263) 15
    ADDOP (264) 19 20
    MULOP (265) 22
    INT (266) 8
    VAL (267) 24
    VAR (268) 6
    ID (269) 3 4 5 9 10 15 23
    LABEL (270)
    NONE (271)
    DONE (272) 3
    PROC (273)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 3
        on right: 0
    $@1 (27)
        on left: 1
        on right: 3
    $@2 (28)
        on left: 2
        on right: 3
    program_arguments (29)
        on left: 4 5
        on right: 3 5
    vars (30)
        on left: 6 7 9 10
        on right: 3 6 10
    type (31)
        on left: 8
        on right: 6
    function_body (32)
        on left: 11 12
        on right: 3
    statements (33)
        on left: 13 14
        on right: 11 13
    statement (34)
        on left: 15 16 17
        on right: 13 14
    expression (35)
        on left: 18 19 20
        on right: 15 20 25 26 27
    term (36)
        on left: 21 22
        on right: 18 19 20 22
    factor (37)
        on left: 23 24 25
        on right: 21 22
    expression_list (38)
        on left: 26 27
        on right: 26 28 29
    read (39)
        on left: 28
        on right: 16
    write (40)
        on left: 29
        on right: 17


State 0

    0 $accept: • program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    3 program: PROGRAM • ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE

    ID  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    3 program: PROGRAM ID • $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    3 program: PROGRAM ID $@1 • '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE

    '('  shift, and go to state 6


State 6

    3 program: PROGRAM ID $@1 '(' • program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE

    ID  shift, and go to state 7

    program_arguments  go to state 8


State 7

    4 program_arguments: ID •

    $default  reduce using rule 4 (program_arguments)


State 8

    3 program: PROGRAM ID $@1 '(' program_arguments • ')' ';' vars $@2 BEG function_body END '.' DONE
    5 program_arguments: program_arguments • ',' ID

    ')'  shift, and go to state 9
    ','  shift, and go to state 10


State 9

    3 program: PROGRAM ID $@1 '(' program_arguments ')' • ';' vars $@2 BEG function_body END '.' DONE

    ';'  shift, and go to state 11


State 10

    5 program_arguments: program_arguments ',' • ID

    ID  shift, and go to state 12


State 11

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' • vars $@2 BEG function_body END '.' DONE

    ID  shift, and go to state 13

    $default  reduce using rule 7 (vars)

    vars  go to state 14


State 12

    5 program_arguments: program_arguments ',' ID •

    $default  reduce using rule 5 (program_arguments)


State 13

    9 vars: ID •

    $default  reduce using rule 9 (vars)


State 14

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars • $@2 BEG function_body END '.' DONE
    6 vars: vars • VAR vars ':' type ';'
   10     | vars • ',' ID

    VAR  shift, and go to state 15
    ','  shift, and go to state 16

    $default  reduce using rule 2 ($@2)

    $@2  go to state 17


State 15

    6 vars: vars VAR • vars ':' type ';'

    ID  shift, and go to state 13

    $default  reduce using rule 7 (vars)

    vars  go to state 18


State 16

   10 vars: vars ',' • ID

    ID  shift, and go to state 19


State 17

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 • BEG function_body END '.' DONE

    BEG  shift, and go to state 20


State 18

    6 vars: vars • VAR vars ':' type ';'
    6     | vars VAR vars • ':' type ';'
   10     | vars • ',' ID

    VAR  shift, and go to state 15
    ','  shift, and go to state 16
    ':'  shift, and go to state 21


State 19

   10 vars: vars ',' ID •

    $default  reduce using rule 10 (vars)


State 20

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG • function_body END '.' DONE

    WRITE  shift, and go to state 22
    READ   shift, and go to state 23
    ID     shift, and go to state 24

    $default  reduce using rule 12 (function_body)

    function_body  go to state 25
    statements     go to state 26
    statement      go to state 27
    read           go to state 28
    write          go to state 29


State 21

    6 vars: vars VAR vars ':' • type ';'

    INT  shift, and go to state 30

    type  go to state 31


State 22

   29 write: WRITE • '(' expression_list ')'

    '('  shift, and go to state 32


State 23

   28 read: READ • '(' expression_list ')'

    '('  shift, and go to state 33


State 24

   15 statement: ID • ASSIGN expression

    ASSIGN  shift, and go to state 34


State 25

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body • END '.' DONE

    END  shift, and go to state 35


State 26

   11 function_body: statements •
   13 statements: statements • ';' statement

    ';'  shift, and go to state 36

    $default  reduce using rule 11 (function_body)


State 27

   14 statements: statement •

    $default  reduce using rule 14 (statements)


State 28

   16 statement: read •

    $default  reduce using rule 16 (statement)


State 29

   17 statement: write •

    $default  reduce using rule 17 (statement)


State 30

    8 type: INT •

    $default  reduce using rule 8 (type)


State 31

    6 vars: vars VAR vars ':' type • ';'

    ';'  shift, and go to state 37


State 32

   29 write: WRITE '(' • expression_list ')'

    ADDOP  shift, and go to state 38
    VAL    shift, and go to state 39
    ID     shift, and go to state 40
    '('    shift, and go to state 41

    expression       go to state 42
    term             go to state 43
    factor           go to state 44
    expression_list  go to state 45


State 33

   28 read: READ '(' • expression_list ')'

    ADDOP  shift, and go to state 38
    VAL    shift, and go to state 39
    ID     shift, and go to state 40
    '('    shift, and go to state 41

    expression       go to state 42
    term             go to state 43
    factor           go to state 44
    expression_list  go to state 46


State 34

   15 statement: ID ASSIGN • expression

    ADDOP  shift, and go to state 38
    VAL    shift, and go to state 39
    ID     shift, and go to state 40
    '('    shift, and go to state 41

    expression  go to state 47
    term        go to state 43
    factor      go to state 44


State 35

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END • '.' DONE

    '.'  shift, and go to state 48


State 36

   13 statements: statements ';' • statement

    WRITE  shift, and go to state 22
    READ   shift, and go to state 23
    ID     shift, and go to state 24

    statement  go to state 49
    read       go to state 28
    write      go to state 29


State 37

    6 vars: vars VAR vars ':' type ';' •

    $default  reduce using rule 6 (vars)


State 38

   19 expression: ADDOP • term

    VAL  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 41

    term    go to state 50
    factor  go to state 44


State 39

   24 factor: VAL •

    $default  reduce using rule 24 (factor)


State 40

   23 factor: ID •

    $default  reduce using rule 23 (factor)


State 41

   25 factor: '(' • expression ')'

    ADDOP  shift, and go to state 38
    VAL    shift, and go to state 39
    ID     shift, and go to state 40
    '('    shift, and go to state 41

    expression  go to state 51
    term        go to state 43
    factor      go to state 44


State 42

   20 expression: expression • ADDOP term
   27 expression_list: expression •

    ADDOP  shift, and go to state 52

    $default  reduce using rule 27 (expression_list)


State 43

   18 expression: term •
   22 term: term • MULOP factor

    MULOP  shift, and go to state 53

    $default  reduce using rule 18 (expression)


State 44

   21 term: factor •

    $default  reduce using rule 21 (term)


State 45

   26 expression_list: expression_list • ',' expression
   29 write: WRITE '(' expression_list • ')'

    ')'  shift, and go to state 54
    ','  shift, and go to state 55


State 46

   26 expression_list: expression_list • ',' expression
   28 read: READ '(' expression_list • ')'

    ')'  shift, and go to state 56
    ','  shift, and go to state 55


State 47

   15 statement: ID ASSIGN expression •
   20 expression: expression • ADDOP term

    ADDOP  shift, and go to state 52

    $default  reduce using rule 15 (statement)


State 48

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' • DONE

    DONE  shift, and go to state 57


State 49

   13 statements: statements ';' statement •

    $default  reduce using rule 13 (statements)


State 50

   19 expression: ADDOP term •
   22 term: term • MULOP factor

    MULOP  shift, and go to state 53

    $default  reduce using rule 19 (expression)


State 51

   20 expression: expression • ADDOP term
   25 factor: '(' expression • ')'

    ADDOP  shift, and go to state 52
    ')'    shift, and go to state 58


State 52

   20 expression: expression ADDOP • term

    VAL  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 41

    term    go to state 59
    factor  go to state 44


State 53

   22 term: term MULOP • factor

    VAL  shift, and go to state 39
    ID   shift, and go to state 40
    '('  shift, and go to state 41

    factor  go to state 60


State 54

   29 write: WRITE '(' expression_list ')' •

    $default  reduce using rule 29 (write)


State 55

   26 expression_list: expression_list ',' • expression

    ADDOP  shift, and go to state 38
    VAL    shift, and go to state 39
    ID     shift, and go to state 40
    '('    shift, and go to state 41

    expression  go to state 61
    term        go to state 43
    factor      go to state 44


State 56

   28 read: READ '(' expression_list ')' •

    $default  reduce using rule 28 (read)


State 57

    3 program: PROGRAM ID $@1 '(' program_arguments ')' ';' vars $@2 BEG function_body END '.' DONE •

    $default  reduce using rule 3 (program)


State 58

   25 factor: '(' expression ')' •

    $default  reduce using rule 25 (factor)


State 59

   20 expression: expression ADDOP term •
   22 term: term • MULOP factor

    MULOP  shift, and go to state 53

    $default  reduce using rule 20 (expression)


State 60

   22 term: term MULOP factor •

    $default  reduce using rule 22 (term)


State 61

   20 expression: expression • ADDOP term
   26 expression_list: expression_list ',' expression •

    ADDOP  shift, and go to state 52

    $default  reduce using rule 26 (expression_list)
